# multiearth

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  metloom_snotel_geometry.ipynb  pyproject.toml  setup.cfg  setup.py  test_requirements.txt
.github/workflows/: nb_integration.yaml  style.yaml  tests.yaml
config/: UAVSAR.yaml  cdec.yaml  cop-dem.yaml  daymet.yaml  demo.yaml  grace-fo.yml  gridmet.yaml  metloom.yaml  modis-aso.yaml  nsidc-amsr.yaml  nsidc-aso.yaml  nsidc-snowsar.yaml  nsidc-ssmi.yaml  nsidc.yaml  randiant_ml_landcover.yaml  sen1.yaml  sen2.yaml  smap.yml  snotel.yaml
config/aoi/: aso-2013-2019-regions.json  conus-expanded.json  demo.json  demo_landcover.json
metaearth/: __init__.py  api.py  cli.py  config.py
metaearth/assets/: __init__.py
metaearth/provider/: __init__.py  base.py  earthdata.py  earthdata_providers.py  metloom.py  mpc.py  nsidc.py  radiant_ml.py  stac.py
metaearth/util/: __init__.py  datetime.py  misc.py  multi.py  stac.py
multiearth/: api.py  cli.py  config.py
multiearth/provider/: __init__.py  metloom.py  prep_for_pr.ipynb  radiant_ml.py  search_providers.py  xarr_mpc.py
multiearth/util/: __init__.py  datetime.py  misc.py
nbs/: SWESAR+UAVSAR.ipynb  amsr-plot.ipynb  daymet-plot.ipynb  explore_snotel.ipynb  grace-fo-plot.ipynb  gridmet-plot.ipynb  metloom.ipynb  sen2-plot.ipynb  smap.ipynb  snowsar.ipynb  ssmi-plot.ipynb
notebooks/: explore_snotel.ipynb  metloom_explore.ipynb  metloom_provider.ipynb  metloom_snotel.ipynb  metloom_snotel_geometry.ipynb
src/metaearth/: cli.py
src/metaearth/provider/: base.py  mpc.py
src/metaearth/util/: misc.py  stac.py
util/: check-autogens.sh  collections_script.py  gen-earthdata-stac-spec.py  search_providers.py  verify-file.py
