[build-system]
requires = [
    # setuptools 42+ required for metadata.license_files support in setup.cfg
    "setuptools>=42,<64",
]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ["py37", "py38", "py39"]
color = true
skip_magic_trailing_comma = true

[tool.isort]
profile = "black"
known_first_party = ["docs", "tests", "metaearth", "train"]
skip_gitignore = true
color_output = true

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
exclude = "(build|data|dist|docs/src|images|logo|logs|output)/"

# Strict
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true

[[tool.mypy.overrides]]
module = "pystac_client"
implicit_reexport = true