# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# This setup.cfg adapted from TorchGeo: http://torchgeo.readthedocs.io
[metadata]
name = metaearth
version = attr: metaearth.__version__
author = Colorado J Reed
author_email = colorado.j.reed@gmail.com
description = MetaEarth: Download remote sensing data from any provider through a single config.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bair-climate-initiative/metaearth
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: GIS
keywords = data download, remote sensing, satellite imagery, earth observation, geospatial

[options]
install_requires =
    # geopandas
    geopandas>=0.11,<0.2
    # httpx [can probably be lowered]
    httpx>=0.23.0,<1
    # loguru [can probably be lowered]
    loguru>=0.6,<1
    # omegaconf 2.1+ required for to_object method
    omegaconf>=2.1,<3
    # shapely 1.3+ required for Python 3 support
    shapely>=1.3,<2
    # microsoft planeatry computer
    planetary_computer>=0.4.6,<1
    # pystac 
    pystac>=1.4,<2
    # pystac_client
    pystac_client>=0.4,<1
    # tqdm
    tqdm>=4.6,<5

python_requires = ~= 3.7
packages = find:

[options.package_data]
metaearth = py.typed

[options.packages.find]
include = torchgeo*

[options.extras_require]
style =
    # black 21.8+ required for Jupyter support
    black[jupyter]>=21.8,<23
    # flake8 3.8+ depends on pyflakes 2.2+, which fixes a bug with mypy error code ignores:
    # https://github.com/PyCQA/pyflakes/pull/455
    flake8>=3.8,<5
    # isort 5.8+ required for extend_skip option
    isort[colors]>=5.8,<6
    # pydocstyle 6.1+ required for pyproject.toml support
    pydocstyle[toml]>=6.1,<7
    # pyupgrade 1.24+ required for --py37-plus flag
    pyupgrade>=1.24,<3
tests =
    # mypy 0.900+ required for pyproject.toml support
    mypy>=0.900,<0.962
    # nbmake 0.1+ required to fix path_source bug
    nbmake>=0.1,<2
    # pytest 6.1.2+ required by nbmake
    pytest>=6.1.2,<8
    # pytest-cov 2.4+ required for pytest --cov flags
    pytest-cov>=2.4,<4

[flake8]
max-line-length = 88
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
exclude =
    # Source
    data/,
    images
    logo/,
    logs/,
    output/,

    # Python
    build/,
    dist/,
    .cache/,
    .mypy_cache/,
    .pytest_cache/,
    __pycache__/,
    *.egg-info/,

    # Git
    .git/,
    .github/,
