# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# This setup.cfg adapted from TorchGeo: http://torchgeo.readthedocs.io
[metadata]
name = metaearth
version = attr: metaearth.__version__
author = Colorado J Reed
author_email = colorado.j.reed@gmail.com
description = MetaEarth: Download remote sensing data from any provider through a single config.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bair-climate-initiative/metaearth
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: GIS
keywords = data download, remote sensing, satellite imagery, earth observation, geospatial

[options]
install_requires =
    # geopandas, 0.10.2 is last version working with python 3.7
    geopandas>=0.10.2,<0.20.0
    # loguru
    loguru>=0.6,<1
    # omegaconf 2.1+ required for to_object method
    omegaconf>=2.1,<3
    # shapely 1.3+ required for Python 3 support
    shapely>=1.3,<2
    # microsoft planetary computer
    planetary_computer>=0.4.6,<1
    # pystac
    pystac>=1.4,<2
    # pystac_client
    pystac_client>=0.4,<0.5
    # radiant earth
    radiant_mlhub<0.6.0
    # tqdm
    tqdm>=4.60,<5

python_requires = ~= 3.7
packages = find:

[options.package_data]
metaearth = py.typed

[options.packages.find]
include = metaearth*

[options.extras_require]
style =
    # black 21.8+ required for Jupyter support
    black[jupyter]>=21.8,<23
    # flake8 3.8+ depends on pyflakes 2.2+, which fixes a bug with mypy error code ignores:
    # https://github.com/PyCQA/pyflakes/pull/455
    flake8>=3.8,<5
    # isort 5.8+ required for extend_skip option
    isort[colors]>=5.8,<6
    # pydocstyle 6.1+ required for pyproject.toml support
    pydocstyle[toml]>=6.1,<7
    # pyupgrade 1.24+ required for --py37-plus flag
    pyupgrade>=1.24,<3
tests =
    # mypy 0.900+ required for pyproject.toml support
    mypy>=0.900,<1.0
    # nbmake 0.1+ required to fix path_source bug
    nbmake>=0.1,<2
    # pytest 6.1.2+ required by nbmake
    pytest>=6.1.2,<8
    # pytest-cov 2.4+ required for pytest --cov flags
    pytest-cov>=2.4,<4
    # Needed for GRACE-FO integration tests
    xarray>=0.20.1
    # for GRACE-FO integration tests
    netCDF4>=1.6.0
    # for integration tests
    matplotlib

    # for UAVSAR tests
    pyproj>=2.2,<4
    # also requires gdal (from conda install)

    # for mypy
    types-requests>=2.28.9,<2.30.0
    types-python-dateutil>=2.8.19,<2.9.0

    # rasterio required for reading GeoTIFF
    rasterio<2


[flake8]
max-line-length = 100
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
exclude =
    # Source
    data/,
    images
    logo/,
    logs/,
    output/,

    # Python
    build/,
    dist/,
    .cache/,
    .mypy_cache/,
    .pytest_cache/,
    __pycache__/,
    *.egg-info/,

    # Git
    .git/,
    .github/,
